[package]
name = "object_store"
version = "0.1.0"
authors = ["Paul Dix <paul@pauldix.net>"]
edition = "2018"

[dependencies]
bytes = "1.0"
chrono = "0.4"
futures = "0.3.5"
itertools = "0.9.0"
percent-encoding = "2.1"
snafu = { version = "0.6.10", features = ["futures"] }

# Amazon S3 integration
rusoto_core = "0.44.0"
rusoto_credential = "0.44.0"
rusoto_s3 = "0.44.0"

# Google Cloud Storage integration
cloud-storage = { version = "0.4.0" }
tokio = { version = "1.0", features=["macros"] }

# Filesystem integration
tokio-util = "0.6.2"
walkdir = "2"

# Microsoft Azure Blob storage integration
azure_sdk_core = "0.43.7"
azure_sdk_storage_blob = "0.45.3"
azure_sdk_storage_core = "0.44.4"

[dev-dependencies]
tempfile = "3.1.0"
dotenv = "0.15.0"

[build-dependencies]
dotenv = "0.15.0"
